# Flowrite

./: README.md
.github/: CODEOWNERS
.github/workflows/: check-pull-request-branch.yml  run-tests.yml
blox_api/: .env  main.py  pyproject.toml
blox_api/common/: auth.py  db.py
blox_api/models/: blog.py  checkpoint.py  message.py  user.py
blox_api/modules/auth/: controller.py  helper.py  models.py  route.py
blox_api/modules/blog/: controller.py  models.py  route.py
blox_api/temporal/: __init__.py  temporal_client.py  worker.py
blox_api/temporal/modules/: policies.py
blox_api/temporal/modules/blog/: activities.py  activity_helper.py  constants.py  models.py  workflow.py  workflow_helper.py
blox_api/temporal/modules/blog/blog_agents/: __init__.py  instruction_agent.py  orchestrator_agent.py  outline_agent.py  research_agent.py  seo_agent.py  summary_agent.py  writing_agent.py
blox_ui/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
blox_ui/src/: middleware.ts
blox_ui/src/app/: globals.css  layout.tsx
blox_ui/src/app/(auth)/: layout.tsx
blox_ui/src/app/(auth)/components/: AuthPage.tsx
blox_ui/src/app/(blog)/: layout.tsx
blox_ui/src/app/(landing)/: layout.tsx  page.tsx
blox_ui/src/app/layouts/: DefaultPageLayout.tsx  SectionLayout.tsx
blox_ui/src/lib/api/: apiClient.ts  auth.ts  blog.ts  useApiClient.ts
blox_ui/src/lib/utils/: validation.ts
blox_ui/src/stores/: authStore.ts  blogStore.ts
blox_ui/src/types/: auth.ts  chat.ts
blox_ui/src/ui/layouts/: DialogLayout.tsx  DrawerLayout.tsx
(+57 files in other folders)
