[project]
name = "blox-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "openai>=1.107.3",
    "temporalio[openai-agents]>=1.17.0",
    "bs4>=0.0.2",
    "tavily-python>=0.7.12",
    "openai-agents>=0.2.9",
]
